helloworldhpaenvs.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  labels:
    app: helloworld2
  name: helloworld2
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: helloworld2
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: helloworld2
    spec:
      containers:
      - env:
        - name: test
          value: demo
        - name: test-index
          valueFrom:
            configMapKeyRef:
              key: index.html
              name: cm-test
        image: nginx
        imagePullPolicy: Always
        name: nginx
        resources:
          limits:
            cpu: "1"
            memory: 256Mi
          requests:
            cpu: 250m
            memory: 5Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /usr/share/nginx/html
          name: cm-test
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 420
          name: cm-test
        name: cm-test
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: helloworld2
  name: helloworld2
  namespace: default
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: helloworld2
  sessionAffinity: None
  type: ClusterIP
  clusterIP: None
