ingress-viz.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: viz
  namespace: linkerd-viz
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: public
  rules:
  - host: web.linkerd-viz.svc
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web
            port:
              number: 8084
