ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: public
  rules:
  - http:
      paths:
      - path: /v1
        pathType: Prefix
        backend:
          service:
            name: helloworld
            port:
              number: 80

  - http:
      paths:
      - path: /v2
        pathType: Prefix
        backend:
          service:
            name: helloworld2
            port:
              number: 80
